--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Document</title>
 </head>
 <body>
-
+<div></div>
 <div class="trivia"></div>
 <button id="submit">Finish</button>
 <div class="score"></div>
