this commit will: add score div

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <title>Document</title>
 </head>
 <body>
-<div></div>
+<!-- <ul>
+  <li><a href="#">Home</a></li>
+  <li><a href="#">About</a></li>
+  <li><a href="#">Quiz</a></li>
+  <li><a href="#">Contact</a></li>
+</ul> -->
 <div class="trivia"></div>
 <button id="submit">Finish</button>
 <div class="score"></div>
