practice css positioning and bo-x model

--- a/index.html
+++ b/index.html
@@ -14,6 +14,52 @@
   <li><a href="#">Quiz</a></li>
   <li><a href="#">Contact</a></li>
 </ul> -->
+
+<section class="css-cheat-sheet">
+  <div class="position">
+    <div class="static">
+    <p class="note">
+      -postion according to the normal flow of the page <br>
+      -not affected by right/left, top/bottom properties
+    </p>
+      <div class="box1-static"> hello</div>
+      <div class="box2-static">bye</div>
+    </div>
+    <div class="relative">
+    <p class="note">
+      -when you set an element to reative, you can set positioning attributes: right/left, top/bottom properties (or else it will be the same as position: static) <br>
+      -gives you the power to shift an element around
+    </p>
+      <div class="box1-relative"> hello</div>
+      <div class="box2-relative">bye</div>
+    </div>
+    <div class="absolute">
+    <p class="note">
+      -element will be removed from the flow of the elements on the page<br>
+      -gives you the power to shift an element around
+    </p>
+      <div class="box1-absolute"> hello</div>
+      <div class="box2-absolute">bye</div>
+    </div>
+
+  </div>
+
+
+  </div>
+  <div class="boxmodel">
+    <div class="note">
+      -box that wraps around every element<br>
+      -contains: content, padding, border, margin<br>
+      -by default, every box is box-sizing: content-box<br>
+    </div>
+    <div class="box-boxmodel"></div>
+        -BORDER BOX: the border is part of the box itself (content shrinks)
+    <div class="box-boxmodel-borderbox"></div>
+  </div>
+
+
+</section>
+
 <div class="trivia"></div>
 <button id="submit">Finish</button>
 <div class="score"></div>
