--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
   <title>Document</title>
 </head>
 <body>
-<!-- <ul>
-  <li><a href="#">Home</a></li>
-  <li><a href="#">About</a></li>
-  <li><a href="#">Quiz</a></li>
-  <li><a href="#">Contact</a></li>
-</ul> -->
+<nav>
+  <div class="logo">
+    <a href="index.html">Javascript Practice</a>
+  </div>
+  <div class="navLinks">
+  <a href="#" class="home">Home</a>
+  <a href="#" class="about">About</a>
+  <a href="#" class="contact">Contact</a>
+  </div>
+</nav>
 
+<div class="wrapper">
 <section class="css-cheat-sheet">
   <div class="position">
     <div class="static">
@@ -45,7 +50,7 @@
   </div>
 
 
-  </div>
+
   <div class="boxmodel">
     <div class="note">
       -box that wraps around every element<br>
@@ -59,7 +64,7 @@
 
 
 </section>
-
+</div>
 <div class="trivia"></div>
 <button id="submit">Finish</button>
 <div class="score"></div>
