--- a/index.html
+++ b/index.html
@@ -9,16 +9,32 @@
 </head>
 <body>
 <nav>
-  <div class="logo">
-    <a href="index.html">Javascript Practice</a>
+
+  <span id="brand">
+    <a href="#">Javascript Practice</a>
+  </span>
+
+  <ul id="menu">
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
+  <div id="toggle">
+    <div class="span" id="one"></div>
+    <div class="span" id="two"></div>
+    <div class="span" id="three"></div>
   </div>
-  <div class="navLinks">
-  <a href="#" class="home">Home</a>
-  <a href="#" class="about">About</a>
-  <a href="#" class="contact">Contact</a>
+
+  <div id="resize">
+    <ul id="menu">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
   </div>
 </nav>
 
+<div class="content"><h1>Navi</h1></div>
 <div class="wrapper">
 <section class="css-cheat-sheet">
   <div class="position">
